# brain-hoai

./: .gitignore  .mcp.json  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  MANIFEST.md  README.md  WORKING.md  index.md  package-lock.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.obsidian/: app.json
changelog/: 2026-W13.md
decisions/: 001-submissions-approach.md  002-governance-timing.md  003-board-roadmap-ownership.md  004-looker-mcp-server-selection.md  005-bdm-brain-scheduling-architecture.md
domains/: ai-initiative-roadmap.md  ai-project-roadmap.md  ai-roadmap-draft.md  ai-roadmap.html
inbox/: adam-bdm-brain-meeting-prep.md  ai-activation-happy-path.md  bdm-brain-meeting-prep.md  morning-review-activation-assessment.md  ollie-bdm-brain-meeting-prep.md  week-14-plan.md
initiatives/: agent-framework.md  ai-activation.md  ai-capability-uplift.md  ai-code-review.md  ai-first-hiring.md  ai-governance-framework.md  ai-native-engineering.md  ai-tool-uptake-measurement.md  bdm-ai-multiplayer.md  cc-extraction-handover.md  claude-standardisation.md  engine-room-triage-automation.md  insight-layer.md  platform-architecture-docs.md  posthog-workflow-analysis.md  process-documentation.md  safety-agent-memory.md  skills-distribution.md  submissions-automation.md  underwriting-assistance-ai.md  whatsapp-driver-reporting.md
issues/: AI-001-board-roadmap-ai-section.md  AI-002-skills-repo-ownership.md  (+161 more)
people/: abs.md  (+61 more)
tools/search/: BUILD.md  install.sh  pyproject.toml
tools/search/pkm_search/: build.py  config.py  embed.py  parse.py  query.py  schema.py
(+418 files in other folders)
